Fixed calculation of the running minimum and maximum.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=RunningStatistic
-version=1.2.0
+version=1.3.0
 author=Libor Gabaj
 maintainer=Libor Gabaj <libor.gabaj@gmail.com>
 sentence=Library for calculating a running statistic value for 16-bit sensor data series.
-paragraph=The library provides storing particular amount of subsequent readings in 16 bit resolution and calculates new running statistical value from previous running values and the new reading, i.e., running median, running average, running minimum, running maximum, running range.
+paragraph=The library provides storing particular amount of subsequent readings in 16 bit resolution and calculates a running statistical value from them, i.e., running median, average, minimum, and maximum.
 category=Data Processing
 url=https://github.com/mrkale/RunningStatistic.git
 architectures=avr
