--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=RunningStatistic
-version=2.0.1
+name=running-statistic
+version=1.0.0
 author=Libor Gabaj
 maintainer=Libor Gabaj <libor.gabaj@gmail.com>
 sentence=Library for calculating a running statistic value for 16-bit sensor data series.
-paragraph=The library provides storing particular amount of subsequent readings in 16 bit resolution and calculates a running statistical value from them, i.e., running median, average, minimum, and maximum.
+paragraph=The library provides storing particular amount of subsequent readings in 16 bit resolution and calculates a running statistical value from them, i.e., running median, average, minimum, and maximum.  It is fully shareable between Particle and Arduino platform.
 category=Data Processing
-url=https://github.com/mrkaleArduinoLib/RunningStatistic.git
-architectures=avr
+url=https://github.com/mrkalePhotonArduinoLib/RunningStatistic.git
+repository=https://github.com/mrkalePhotonArduinoLib/RunningStatistic.git
+architectures=avr, particle-core, particle-photon, particle-electron
